simple battle funtion and some basic css

--- a/src/main/ui/src/components/GameContainer/styles.module.css
+++ b/src/main/ui/src/components/GameContainer/styles.module.css
@@ -2,5 +2,6 @@
   border: 1px black dashed;
   padding: 1rem;
   text-align: center;
-  margin: 1rem
+  margin: 1rem;
+  background-color: antiquewhite;
 }
