--- a/src/main/ui/src/components/Menus/CharacterOption/styles.module.css
+++ b/src/main/ui/src/components/Menus/CharacterOption/styles.module.css
@@ -2,7 +2,8 @@
   border: 1px black dashed;
   padding: 1rem;
   text-align: center;
-  margin: 1rem
+  margin: 1rem;
+  background-color: antiquewhite;
 }
 .CharacterImage{
   height: 200px;
