--- a/src/main/ui/src/components/Footer/styles.module.css
+++ b/src/main/ui/src/components/Footer/styles.module.css
@@ -2,4 +2,7 @@
   border: 1px black solid;
   padding: 1rem;
   text-align: center;
+  font-size: small;
+  text-align:  right;
+  background-color: antiquewhite;
 }
