--- a/src/main/ui/src/components/Header/styles.module.css
+++ b/src/main/ui/src/components/Header/styles.module.css
@@ -2,4 +2,7 @@
   border: 1px black solid;
   padding: 1rem;
   text-align: center;
+  display: flex;
+  justify-content: space-between;
+  background-color: antiquewhite;
 }
