--- a/src/main/ui/src/components/Menus/CharacterSelect/styles.module.css
+++ b/src/main/ui/src/components/Menus/CharacterSelect/styles.module.css
@@ -2,5 +2,7 @@
   border: 1px black dashed;
   padding: 1rem;
   text-align: center;
-  margin: 1rem
+  margin: 1rem;
+  background-color: antiquewhite;
+
 }
