--- a/src/main/ui/src/components/EncountersList/styles.module.css
+++ b/src/main/ui/src/components/EncountersList/styles.module.css
@@ -1,4 +1,4 @@
-.main{
+.main {
   background-color: transparent;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -12,7 +12,7 @@
   margin-bottom: 1rem;
 }
 
-.main1{
+.main1 {
   background: url(/public/Images/LevelAreaFull.png);
   background-size: cover;
   height: 656px;
@@ -20,7 +20,8 @@
 }
 
 .button {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
   color: rgba(188, 140, 103, 1);
   justify-content: center;
   align-items: center;
@@ -38,7 +39,7 @@
 .button:hover {
 }
 
-.CharacterImage{
+.CharacterImage {
   height: 100px;
 }
 
@@ -51,7 +52,7 @@
   height: 100px;
 }
 
-.GameNarrator{
+.GameNarrator {
   background-color: transparent;
 }
 
@@ -61,9 +62,10 @@
 
 .completed {
   filter: grayscale(100%);
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
   color: rgba(188, 140, 103, 1);
-  background-color: rgba(255, 215, 169, .8);
+  background-color: rgba(255, 215, 169, 0.8);
   background-color: transparent;
   justify-content: center;
   align-items: center;
