--- a/src/main/ui/src/components/Footer/styles.module.css
+++ b/src/main/ui/src/components/Footer/styles.module.css
@@ -1,4 +1,4 @@
-.main{
+.main {
   text-align: center;
   background-color: transparent;
   font-size: medium;
@@ -8,7 +8,6 @@
 .glow {
   color: white;
   font-size: medium;
-  text-shadow: 
-  0px 0px 15px rgb(236, 233, 233),
-  0px 0px 5px rgba(0,0,0, 1);
+  text-shadow: 0px 0px 15px rgb(236, 233, 233),
+    0px 0px 5px rgba(0, 0, 0, 1);
 }
