--- a/src/main/ui/src/components/Game/Battle/BattleContainer/styles.module.css
+++ b/src/main/ui/src/components/Game/Battle/BattleContainer/styles.module.css
@@ -1,4 +1,4 @@
-.main{
+.main {
   border: 1px black solid;
   text-align: center;
   background-color: black;
@@ -11,9 +11,10 @@
   background-image: url(../../../../../public/Images/game_background_1.png);
   background-size: cover;
   display: grid;
-  grid-template-areas: "narrator enemy enemy " 
-                       "animation animation animation"
-                       "player player battlemenu";
+  grid-template-areas:
+    'narrator enemy enemy '
+    'animation animation animation'
+    'player player battlemenu';
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: minmax(1fr 4fr 1fr);
   width: 80%;
@@ -30,7 +31,7 @@
 .animation {
   display: flex;
   justify-content: center;
-  grid-area: animation
+  grid-area: animation;
 }
 
 .player {
