--- a/src/main/ui/src/components/Game/Battle/BattleMenuComponent/styles.module.css
+++ b/src/main/ui/src/components/Game/Battle/BattleMenuComponent/styles.module.css
@@ -1,24 +1,22 @@
-.main{
+.main {
   display: flex;
   padding-right: 1rem;
   justify-content: center;
   text-align: center;
   justify-content: right;
-  }
+}
 
 .menuButton {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  /* color: dodgerblue; */
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
   background-color: rgba(255, 255, 255, 0.2);
   display: flex;
-  /* justify-content: center; */
   align-items: center;
   justify-content: center;
   height: 100px;
   width: 100px;
   margin: 1rem;
   border-radius: 20px;
-  /* border: 1px solid white; */
   padding: 0.5rem;
   text-align: center;
   cursor: pointer;
@@ -36,7 +34,6 @@
 }
 
 .menuButton:hover {
-  /* border: 1px solid black; */
   color: white;
   cursor: pointer;
 }
@@ -45,5 +42,5 @@
   transform: rotate(90deg);
 }
 .menuButton:nth-child(2):hover {
-  color: red
+  color: red;
 }
