--- a/src/main/ui/src/components/Game/Battle/PreBossContainer/styles.module.css
+++ b/src/main/ui/src/components/Game/Battle/PreBossContainer/styles.module.css
@@ -3,9 +3,6 @@
   text-align: center;
   margin: 1rem;
   background-color: transparent;
-  /* background-image: url(https://assetstorev1-prd-cdn.unity3d.com/package-screenshot/3ec04946-604a-4011-9e42-027d362fcbb7_scaled.jpg); */
-  /* background-image: url(https://t3.ftcdn.net/jpg/02/96/74/90/360_F_296749091_cBS5tC0ike7Z8UedzPL74nYFRc9Q3rjW.jpg); */
-  /* background-image: url(https://images.unsplash.com/photo-1597299407241-638aa26e56c6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=857&q=80); */
   width: 80%;
   background-size: cover;
   height: 656px;
@@ -20,8 +17,8 @@
   border: none;
   font-size: xx-large;
   font-weight: bold;
-  font-family: Aboreto, 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
+  font-family: Aboreto, 'Trebuchet MS', 'Lucida Sans Unicode',
+    'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   color: white;
   background-color: transparent;
   justify-content: center;
@@ -34,7 +31,6 @@
 }
 
 .button:hover {
-  text-shadow: 
-  0px 0px 15px rgb(236, 233, 233),
-  0px 0px 0px rgba(0,0,0, 1);
+  text-shadow: 0px 0px 15px rgb(236, 233, 233),
+    0px 0px 0px rgba(0, 0, 0, 1);
 }
