--- a/src/main/ui/src/components/Menus/CharacterOption/styles.module.css
+++ b/src/main/ui/src/components/Menus/CharacterOption/styles.module.css
@@ -1,4 +1,4 @@
-.main{
+.main {
   border-radius: 12px;
   text-align: center;
   display: flex;
@@ -9,11 +9,16 @@
   margin: auto;
   margin-bottom: 1rem;
   box-shadow: -1px 15px 30px -12px black;
-  background: linear-gradient(to bottom, rgba(140,122,122,1) 0%, rgba(175,135,124,1) 65%, rgba(175,135,124,1) 100%) fixed;
-  background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/coc-background.jpg') no-repeat center center fixed;
+  background: linear-gradient(
+      to bottom,
+      rgba(140, 122, 122, 1) 0%,
+      rgba(175, 135, 124, 1) 65%,
+      rgba(175, 135, 124, 1) 100%
+    )
+    fixed;
+  background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/coc-background.jpg')
+    no-repeat center center fixed;
   background-size: cover;
-  /* transform: rotate(360deg); */
-
 }
 
 .main:hover {
@@ -23,7 +28,8 @@
 }
 
 .button {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
   color: black;
   display: flex;
   justify-content: center;
@@ -42,7 +48,7 @@
   transform: rotate(358deg);
 }
 
-.CharacterImage{
+.CharacterImage {
   height: 120px;
 }
 
