--- a/src/main/ui/src/components/Menus/StartMenu/StartGameNarrator/styles.module.css
+++ b/src/main/ui/src/components/Menus/StartMenu/StartGameNarrator/styles.module.css
@@ -2,15 +2,13 @@
   background-color: transparent;
   color: white;
   font-size: xx-large;
-  /* width: 70%; */
 }
 
 .main:hover {
   cursor: pointer;
-  text-shadow: 
-    0px 0px 15px rgb(236, 233, 233),
-    0px 0px 0px rgba(0,0,0, 1);
-  }
+  text-shadow: 0px 0px 15px rgb(236, 233, 233),
+    0px 0px 0px rgba(0, 0, 0, 1);
+}
 
 .script {
   text-align: center;
