--- a/src/main/ui/src/components/Narrator/styles.module.css
+++ b/src/main/ui/src/components/Narrator/styles.module.css
@@ -1,7 +1,7 @@
 .main {
   border-radius: 15px;
-  padding: 1rem 0 ;
-  background-color: rgba(255, 255, 255, .6);
+  padding: 1rem 0;
+  background-color: rgba(255, 255, 255, 0.6);
   width: 100%;
 }
 
